--- a/drivers/input/misc/Makefile
+++ b/drivers/input/misc/Makefile
@@ -27,3 +27,5 @@ obj-$(CONFIG_INPUT_UINPUT)		+= uinput.o
 obj-$(CONFIG_INPUT_WISTRON_BTNS)	+= wistron_btns.o
 obj-$(CONFIG_INPUT_YEALINK)		+= yealink.o
 obj-$(CONFIG_INPUT_STMP3XXX_ROTDEC)	+= stmp3xxx_rotdec.o
+obj-$(CONFIG_INPUT_MMA7455L)		+= mma7455l.o
+
