Intermediate alpha release with partially working touchscreen for special customer.

--- a/drivers/mxc/pmic/mc13892/Makefile
+++ b/drivers/mxc/pmic/mc13892/Makefile
@@ -2,6 +2,7 @@
 # Makefile for the mc13783 pmic drivers.
 #
 
+CFLAGS_pmic_adc.o := -DDEBUG
 obj-$(CONFIG_MXC_MC13892_ADC) += pmic_adc.o
 #obj-$(CONFIG_MXC_MC13892_RTC) += pmic_rtc.o
 obj-$(CONFIG_MXC_MC13892_LIGHT) += pmic_light.o
