ccw9m2443: add support for LQ070Y3DG3B1 display
This commit adds support for the LQ070Y3DG3B1 (requires the
HRLCD_TO_JSCC)X_ADAPT board).

Signed-off-by: Pedro Perez de Heredia <pedro.perez@digi.com>
(cherry picked from commit 7138dc4c48d2dd9ea4c68899460d886e477317b9)

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/arch/arm/mach-s3c2443/displays/Kconfig
+++ b/arch/arm/mach-s3c2443/displays/Kconfig
@@ -23,6 +23,11 @@ config CC9M2443_LQ064V3DG01
 	help
 	  This enables the support for the LQ064V3DG01 TFT display.
 
+config CC9M2443_LQ070Y3DG3B1
+	bool "LQ070Y3DG3B1 TFT LCD support"
+	help
+	  This enables the support for the LQ070Y3DG3B1 TFT display.
+
 config CC9M2443_CUSTOM
 	bool "Custom display support"
 	help
