Apalis iMX6: add device tree for the Ixora board
The Ixora carrier board is mostly a subset off what is on the evaluation board.

The commits adds a device tree with the following changes to the eval board one:
- I2C EEPROM added
- LEDs through led sysfs interface added
- MMC 8bit interface disabled
- Reset line to PCIe switch and PCIe switch removed
- Video DAC to Analog RGB output disabled
- spidev on SPI2 removed
- mipi camera support disabled/removed

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -131,6 +131,8 @@ dtb-$(CONFIG_ARCH_MXC) += \
 	imx6q-apalis-eval.dtb \
 	imx6q-apalis-eval_v1_0.dtb \
 	imx6q-arm2.dtb \
+	imx6q-apalis-ixora.dtb \
+	imx6q-apalis-ixora_v1_0.dtb \
 	imx6q-nitrogen6x.dtb \
 	imx6q-nitrogen6_max.dtb \
 	imx6q-nitrogen6_mtp.dtb \
