Revert "apalis-imx8qm: disable LVDS by default"
This reverts commit 6be9d4ba6f9e4bbb27b2ae4ba5be949183cab8bd.

--- a/arch/arm64/boot/dts/freescale/fsl-imx8qm-apalis.dts
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qm-apalis.dts
@@ -956,11 +956,11 @@
 };
 
 &ldb2_phy {
-	status = "disabled";
+	status = "okay";
 };
 
 &ldb2 {
-	status = "disabled";
+	status = "okay";
 	fsl,dual-channel;
 
 	lvds-channel@0 {
